# emergence

./: COPYRIGHT.txt  Changelog  buffer.c  buffer.h  inout.c  polygon.c  rel2abs.h  setup  types.h  vertex.h
common/: abs2rel.c  abs2rel.h  buffer.c  buffer.h  inout.c  inout.h  llist.h  minmax.h  polygon.c  polygon.h  prefix.c  prefix.h  rel2abs.c  rel2abs.h  resource.c  resource.h  stringbuf.c  stringbuf.h  types.h  user.c  user.h  vertex.h
em-game/: Changelog  Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  build-external-libs  config.status  configure  configure.in
em-game/autom4te.cache/: output.0  requests  traces.0
em-game/base-maps/: Makefile.in
em-game/common/: Makefile.am  Makefile.in
em-game/demos/: Makefile.am  demo1.demo  demo2.demo  demo3.demo  test.demo
em-game/desktop/: Makefile.am  em-client.desktop  em-server.desktop
em-game/em-client/: Makefile.am  Makefile.in  bsp.c  bsp.h  console.c  console.h  control.c  control.h  dga.c  dga.h  download.c  download.h  entry.c  entry.h  event.c  event.h  floats.c  floats.h  game.c  game.h  gl.c  gl.h  input.c  input.h  key.c  key.h  line.c  line.h  main.c  main.h  map.c  map.h  network.c  network.h  particles.c  particles.h  ping.c  ping.h  rcon.c  rcon.h  (+20 more)
em-game/em-client/share/: Makefile.am  Makefile.in  default-autoexec  default-controls.config
em-game/em-client/shared/: Makefile.am  Makefile.in
em-game/em-server/: Makefile.am  Makefile.in  console.c  console.h  download.c  download.h  entry.c  entry.h  game.c  game.h  key.c  key.h  main.c  main.h  network.c  network.h  ping.c  ping.h  servers.c  servers.h
em-game/em-server/shared/: Makefile.am  Makefile.in
em-game/gsub/: Makefile.am  Makefile.in
em-game/share/: Makefile.am  default-client.autoexec  default-controls.config  default-server.autoexec
em-game/share/demos/: Jonny.demo  Makefile.am  demo1.demo  demo4.demo  demo5.demo  demo6.demo  demo7.demo  fun2.demo  fun4.demo  insane2.demo  spaceLem.demo
em-game/share/em-client/: Makefile.am  default-autoexec  default-controls.config
em-game/share/stock-maps/: Makefile.am  map3.cmap  map4.cmap
em-game/share/stock-object-textures/: Makefile.am
em-game/share/stock-skins/: Makefile.am  default.skin
em-game/share/stock-sounds/: Makefile.am
em-game/shared/: alarm.c  alarm.h  bsp.c  bsp.h  config.c  config.h  cvar.c  cvar.h  fileinfo.c  fileinfo.h  network.c  network.h  objects.h  openssl.c  openssl.h  parse.c  parse.h  rdtsc.S  rdtsc.h  servers.c  servers.h  sgame.c  sgame.h  timer.c  timer.h  user.c  user.h
em-game/stock-maps/: Makefile.am  map3.cmap
em-game/stock-object-textures/: Makefile.am
em-game/stock-skins/: Makefile.am  Makefile.in  default.skin
em-game/stock-sounds/: Makefile.am  Makefile.in
em-tools/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.in
em-tools/autom4te.cache/: output.0  requests  traces.0
em-tools/common/: Makefile.am  Makefile.in
em-tools/desktop/: Makefile.am  em-edit.desktop
em-tools/em-edit/: .depend  .tm_project.cache  Makefile.am  Makefile.in  atest.cm  atest.map  atest2.map  bezier.c  bezier.h  bsp.c  bsp.h  callbacks.c  callbacks.h  cameron.c  cameron.h  conic.c  conic.h  conns.c  conns.h  curves.c  curves.h  em-edit.glade  em-edit.gladep.bak  em_edit.prj  em_edit.prj.bak  em_edit.pws  fills.c  fills.h  floats.c  floats.h  glade.c  glade.c.bak  glade.h  glade.h.bak  grid.c  grid.h  interface.c  interface.h  lines.c  lines.h  (+21 more)
em-tools/em-edit/share/: Makefile.am  Makefile.in
em-tools/em-skin/: Makefile.am  Makefile.in  em_skin.prj  em_skin.pws  main.c  main.h
em-tools/gsub/: Makefile.am  Makefile.in
em-tools/pixmaps/: Makefile.am
em-tools/share/em-edit/: Makefile.am
em-tools/share/stock-object-textures/: Makefile.am
em-tools/stock-object-textures/: Makefile.am  Makefile.in
emergence/common/: rel2abs.c  vertex.h
emergence/em-game/: aclocal.m4
emergence/em-game/autom4te.cache/: output.0  requests  traces.0
emergence/em-game/common/: Makefile.in
emergence/em-game/em-client/: Makefile.am  Makefile.in  bsp.c  console.h  entry.c  entry.h  event.c  game.c  gl.c  main.c  network.h  particles.h  ping.h  render.c  skin.c  stars.c  tick.h  x.h
emergence/em-game/em-client/shared/: Makefile.am
emergence/em-game/em-server/: entry.h  main.c  network.c
emergence/em-game/em-server/shared/: Makefile.in
emergence/em-game/gsub/: Makefile.am
emergence/em-game/shared/: timer.h
emergence/em-tools/: Makefile.am
emergence/em-tools/autom4te.cache/: traces.0
emergence/em-tools/em-edit/: Makefile.am  callbacks.c  conic.h  main_lock.h
emergence/em-tools/em-edit/share/: Makefile.am
emergence/em-tools/em-skin/: Makefile.am  Makefile.in
emergence/em-tools/stock-object-textures/: Makefile.in
emergence/gsub/: blit_ops.c  fb_update_mmx.S  surfaces.c  text.c
gsub/: alpha_pixel_plot_x86.S  alpha_rect_draw_mmx.S  alpha_surface_blit_mmx.S  bb_clear_mmx.S  blit_ops.c  convert_16bit_to_32bit_mmx.S  fb_update_mmx.S  gsub.c  gsub.h  line.c  resample.c  surface_blit_mmx.S  surfaces.c  text.c
junk/: card.xcf
misc/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.in
misc/autom4te.cache/: output.0  traces.0
misc/blocksize/: blocksize  blocksize.c
misc/common/: Makefile.am  Makefile.in
misc/gsub/: Makefile.am  Makefile.in
misc/plasma/: Makefile.am  Makefile.in  main.c
misc/random/: keys.c  random.c
misc/shield/: Makefile.am  Makefile.in  main.c
win32crap/: entry.cpp  graphics.cpp  graphics.h  input.cpp  input.h  main.cpp  main.h  math.cpp  math.h  network.cpp  network.h  pipe.cpp  pipe.h  random.cpp  random.h  render.cpp  sound.cpp  sound.h  winmain.h
