AC_INIT(emergence, 0.4)
AC_CONFIG_SRCDIR(stock-sounds/railgun.wav)
AM_INIT_AUTOMAKE


AM_PROG_AS
AC_PROG_CC
AC_PROG_RANLIB
 


AC_OUTPUT(Makefile common/Makefile gsub/Makefile  \
	em-client/Makefile em-client/shared/Makefile \
	em-client/share/Makefile \
	em-server/Makefile em-server/shared/Makefile \
	stock-sounds/Makefile \
	base-maps/Makefile  \
	stock-skins/Makefile)

