AC_INIT(emergence, 0.5.5-dev)
AC_CONFIG_SRCDIR(em-client/main.c)
AM_INIT_AUTOMAKE

AM_PROG_AS
AC_PROG_CC
AC_PROG_RANLIB
 
AM_BINRELOC
AM_NONAUTHENTICATING


AC_OUTPUT(Makefile common/Makefile gsub/Makefile  \
	em-client/Makefile em-client/shared/Makefile \
	em-client/share/Makefile \
	em-server/Makefile em-server/shared/Makefile \
	stock-sounds/Makefile \
	base-maps/Makefile  \
	stock-skins/Makefile \
	stock-object-textures/Makefile \
	pixmaps/Makefile desktop/Makefile \
	demos/Makefile stock-maps/Makefile)
