AC_INIT(emergence, 0.6)
AC_CONFIG_SRCDIR(em-client/main.c)
AM_INIT_AUTOMAKE

AM_PROG_AS
AC_PROG_CC
AC_PROG_RANLIB
 
AM_BINRELOC
AM_NONAUTHENTICATING


AC_OUTPUT(Makefile common/Makefile gsub/Makefile  \
	em-client/Makefile em-client/shared/Makefile \
	em-server/Makefile em-server/shared/Makefile \
	pixmaps/Makefile desktop/Makefile \

	share/Makefile \
	share/em-client/Makefile \
	share/stock-sounds/Makefile \
	share/base-maps/Makefile \
	share/stock-skins/Makefile \
	share/stock-object-textures/Makefile \
	share/demos/Makefile \
	share/stock-maps/Makefile)

