AC_INIT(em-tools, 0.5.0)
AC_CONFIG_SRCDIR(em-edit/main.c)
AM_INIT_AUTOMAKE

AM_PROG_AS
AC_PROG_CC
AC_PROG_RANLIB

PKG_CHECK_MODULES(GNOME, libgnomeui-2.0)
AC_SUBST(GNOME_CFLAGS)
AC_SUBST(GNOME_LIBS)

AC_OUTPUT(Makefile common/Makefile gsub/Makefile em-edit/Makefile \
	em-edit/share/Makefile em-skin/Makefile \
	stock-object-textures/Makefile)
