AC_INIT(em-tools, 0.8-dev)
AC_CONFIG_SRCDIR(em-edit/main.c)
AM_INIT_AUTOMAKE

AM_PROG_AS
AC_PROG_CC
AC_PROG_RANLIB

PKG_CHECK_MODULES(GNOME, libgnomeui-2.0)
AC_SUBST(GNOME_CFLAGS)
AC_SUBST(GNOME_LIBS)

AM_BINRELOC

pkgdatadir=${datadir}/emergence
AC_SUBST(pkgdatadir)


AC_OUTPUT(Makefile common/Makefile gsub/Makefile em-edit/Makefile \
#	em-skin/Makefile \

	share/Makefile \
	share/em-edit/Makefile \
	share/stock-object-textures/Makefile \

	pixmaps/Makefile desktop/Makefile)
