sharedatadir = $(datadir)/emergence/stock-object-textures

sharedata_DATA =  rails.png   shield.png   unowned-plasma-cannon.png \
	plasma.png  rocket.png  unowned-minigun.png  \
	unowned-rocket-launcher.png


EXTRA_DIST = rails.png   shield.png   unowned-plasma-cannon.png \
	plasma.png  rocket.png  unowned-minigun.png  \
	unowned-rocket-launcher.png


