sharedatadir = $(datadir)/emergence/em-edit

sharedata_DATA = about.png splash.png gravity-well-placeholder.png \
	stock-speedup-ramp.png node.png teleporter-placeholder.png \
	point.png vect-sat.png select.png width-sat.png \
	spawn-point-placeholder.png

EXTRA_DIST = about.png splash.png gravity-well-placeholder.png \
	stock-speedup-ramp.png node.png teleporter-placeholder.png \
	point.png vect-sat.png select.png width-sat.png \
	spawn-point-placeholder.png

